2009-05-03  Stephane Delcroix  <sdelcroix@novell.com>

	* glib/Idle.cs:
	* glib/Timeout.cs: add Add() overloads taking a priority
	* glib/Makefile.am: 
	* glib/Property.cs: Property enum, used as argument for the new Add
	overloads

2009-05-02  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: updates for new RecentItems prop.
	* gtk/Makefile.am: add new custom.
	* gtk/RecentManager.custom: obsolete Items prop impl.
	[Fixes #387754]

2009-05-02  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: forward port of a win32 fix from 2-12-branch.

2009-05-01  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs: get gtype from instance data.
	* glib/Value.cs: use instance NativeType when initing for props.
	[Fixes #500157] Patch by Sebastian Dröge.

2009-04-28  Mike Kestner  <mkestner@novell.com>

	* generator/Parameters.cs: ref parameter marshaling fix.
	[Fixes #498472] Patch by Sebastian Dröge.

2009-04-27  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/Widget.custom: Implement signal registration for the
	Activate, SettScrollAdjustments and key binding signals
 	in managed code.

2009-04-25  Mike Kestner  <mkestner@novell.com>

	* generator/OpaqueGen.cs: support abstract opaque classes,
	though I have no idea why anyone would want one.
	[Fixes #494212] Revised patch from Sebastian Dröge.

2009-04-25  Mike Kestner  <mkestner@novell.com>

	* parser/gapi-fixup.cs: add remove-attr and change-node-type
	fixup rules.  [Fixes #494194]

2009-04-25  Mike Kestner  <mkestner@novell.com>

	* generator/OpaqueGen.cs: support declaring managed ifaces.
	[Fixes #494193] Revised patch from Sebastian Dröge.

2009-04-24  Stephane Delcroix  <sdelcroix@novell.com>

	* generator/Ctor.cs: Read the name attribute for constructors
	converted to static factory methods.

2009-04-21  Christian Hoff  <christian_hoff@gmx.net>

	* glib/Value.cs: Fixes for fundamental GType support. Patch
	provided by Sebastian Dröge.

2009-04-21  Christian Hoff  <christian_hoff@gmx.net>
