@@ -323,9 +323,13 @@ namespace GLib {
 
 		protected GType LookupGType ()
 		{
-			GTypeInstance obj = (GTypeInstance) Marshal.PtrToStructure (Handle, typeof (GTypeInstance));
-			GTypeClass klass = (GTypeClass) Marshal.PtrToStructure (obj.g_class, typeof (GTypeClass));
-			return new GLib.GType (klass.gtype);
+			if (Handle != IntPtr.Zero) {
+				GTypeInstance obj = (GTypeInstance) Marshal.PtrToStructure (Handle, typeof (GTypeInstance));
+				GTypeClass klass = (GTypeClass) Marshal.PtrToStructure (obj.g_class, typeof (GTypeClass));
+				return new GLib.GType (klass.gtype);
+			} else {
+				return LookupGType (GetType ());
+			}
 		}
 
 		protected internal static GType LookupGType (System.Type t)
