@@ -1,3 +1,8 @@
+2009-05-03  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Object.cs: revert to old LookupType behavior when Handle is
+	not set.  [Fixes #500417]
+
 2009-05-03  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* glib/Idle.cs:
@@ -32,7 +37,7 @@
 
 	* gtk/Widget.custom: Implement signal registration for the
 	Activate, SettScrollAdjustments and key binding signals
- 	in managed code.
+	in managed code.
 
 2009-04-25  Mike Kestner  <mkestner@novell.com>
 
